--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="about-content">
                     <div class="about-image animate-item">
                         <div class="image-container">
-                            <img src="/images/meV2.jpg" alt="ED">
+                            <img src="./images/meV2.jpg" alt="ED">
                         </div>
                     </div>
                     <div class="about-text animate-item">
@@ -217,7 +217,7 @@
                 <div class="projects-grid">
                     <div class="project-card animate-item">
                         <div class="project-image">
-                            <img src="images/no.11.gif" alt="E-commerce Platform">
+                            <img src="./images/no.11.gif" alt="E-commerce Platform">
                         </div>
                         <div class="project-content">
                             <h3>E-commerce Platform</h3>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="project-card animate-item">
                         <div class="project-image">
-                            <img src="images/no.11.gif" alt="Task Management App">
+                            <img src="./images/no.11.gif" alt="Task Management App">
                         </div>
                         <div class="project-content">
                             <h3>Task Management App</h3>
@@ -509,7 +509,7 @@
                 <div class="blog-grid">
                     <div class="blog-card animate-item">
                         <div class="blog-image">
-                            <img src="images/no.8.gif" alt="Building Accessible React Applications">
+                            <img src="./images/no.8.gif" alt="Building Accessible React Applications">
                         </div>
                         <div class="blog-content">
                             <div class="blog-date">
@@ -525,7 +525,7 @@
                     </div>
                     <div class="blog-card animate-item">
                         <div class="blog-image">
-                            <img src="images/no.9.gif" alt="Performance Optimization Techniques for Next.js">
+                            <img src="./images/no.9.gif" alt="Performance Optimization Techniques for Next.js">
                         </div>
                         <div class="blog-content">
                             <div class="blog-date">
@@ -541,7 +541,7 @@
                     </div>
                     <div class="blog-card animate-item">
                         <div class="blog-image">
-                            <img src="images/no.10.gif" alt="The Future of Web Development: What's Coming in 2024">
+                            <img src="./images/no.10.gif" alt="The Future of Web Development: What's Coming in 2024">
                         </div>
                         <div class="blog-content">
                             <div class="blog-date">
