--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="about-content">
                     <div class="about-image animate-item">
                         <div class="image-container">
-                            <img src="/images/meV2.jpg" alt="ED">
+                            <img src="./images/meV2.jpg" alt="ED">
                         </div>
                     </div>
                     <div class="about-text animate-item">
